# uima-uimacpp

./: .asf.yaml  .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile.am  Makefile.in  NOTICE  NOTICE.4bin  NOTICE.4sdk  NOTICE.4src  README.4bin  README.4sdk  README.4src  README.md  RELEASE_NOTES.html  aclocal.m4  autogen.sh  build.Dockerfile  buildSrcTree.cmd  buildSrcTree.sh  buildsdk.cmd  buildsdk.sh  configure  configure.ac  createRelease.txt  docker-entrypoint.sh  uima.pc.in  uimacpp-make-sdk.sh
.github/workflows/: imagActions.yaml
data/: resourceSpecifierSchema.xsd
docs/: QuickStart.html  builddocs.cmd  builddocs.sh  doxyheader.html  overview_and_setup.html  uimacpp.dox  uimacppdocs.mak
examples/: .cdtproject  .project  Dockerfile  README.md  readme.html  runall.cmd  runall.sh
examples/data/: docforsegmenter.xcas  docforsegmenter.xmi  filetcas.xcas  filetcas.xmi  sofa.xcas  sofa.xmi  tcas.xcas  tcas.xmi
examples/descriptors/: DaveDetector.xml  Deploy_DaveDetector.xml  SimpleTextSegmenter.xml  SofaDataAnnotator.xml  SofaExampleAnnotator.xml  XCasWriterCasConsumer.xml
m4/: find_activemq.m4  find_apr.m4  find_apu.m4  find_icu.m4  find_xerces.m4
scriptators/: ThreadAnnotator.h  uima.i
src/: Makefile.am  Makefile.in  Makefile.prebuild  Makefile.unix  base.mak  checkEnvVars.bat  configure.in  deployCppService.vcproj  install.vcproj  installUimaCpp.bat  readme.tobuild  runaecpp.vcproj  uimacpp.sln  uimacpp.vcproj  winmake.cmd
src/cas/: arrayfs.cpp  cas.cpp  caswriter_abase.cpp  featurestructure.cpp  fsfilterbuilder.cpp  fsindex.cpp  fsindexrepository.cpp  fsiterator.cpp  internal_casdeserializer.cpp  internal_casserializer.cpp  internal_serializedcas.cpp  internal_xmlconstants.cpp  listfs.cpp  lowlevel_fsheap.cpp  lowlevel_index.cpp  lowlevel_indexcomparator.cpp  lowlevel_indexdefinition.cpp  lowlevel_indexrepository.cpp  lowlevel_internal_indexes.cpp  lowlevel_typesystem.cpp  sofastream.cpp  typenamespace.cpp  typesystem.cpp  xcasdeserializer.cpp  xcasdeserializer_handler.cpp  xmideserializer.cpp  xmideserializer_handler.cpp  xmiwriter.cpp  xmlerror_handler.cpp  xmltypesystemreader.cpp  xmltypesystemwriter.cpp  xmlwriter.cpp
src/cas/uima/: annotator_generic.inl  arrayfs.hpp  cas.hpp  casexception.hpp  featurestructure.hpp  fsfilterbuilder.hpp  fsindex.hpp  internal_casdeserializer.hpp  internal_casimpl.hpp  internal_casserializer.hpp  internal_fspromoter.hpp  internal_fsvalue_accessors.hpp  internal_serializedcas.hpp  internal_typeshortcuts.hpp  internal_xmlconstants.hpp  lowlevel_fsheap.hpp  lowlevel_index.hpp  lowlevel_indexcomparator.hpp  lowlevel_indexdefinition.hpp  lowlevel_indexrepository.hpp  lowlevel_internal_heap.hpp  lowlevel_internal_indexes.hpp  lowlevel_typesystem.hpp  sofastream.hpp  sofastreamhandler.hpp  type_or_feature.hpp  typenamespace.hpp  typesystem.hpp  xcasdeserializer.hpp  xcasdeserializer_handler.hpp  xmideserializer.hpp  xmideserializer_handler.hpp  xmishareddata.hpp  xmiwriter.hpp  xmlerror_handler.hpp  xmltypesystemwriter.hpp  xmlwriter.hpp
src/framework/: Makefile.am  Makefile.in  annotator.cpp  annotator_context.cpp  annotator_mgr.cpp  casdefinition.cpp  caspool.cpp  config_param.cpp  consoleui.cpp  cp2ucnvrt.cpp  dottypesystemwriter.cpp  engine.cpp  exceptions.cpp  internal_aggregate_engine.cpp  internal_engine_base.cpp  internal_jedii_engine.cpp  internal_primitive_engine.cpp  language.cpp  log.cpp  res_annotator.cpp  resmgr.cpp  taespecifier.cpp  taespecifierbuilder.cpp  timedatetools.cpp  token_properties.cpp  typesystemdescription.cpp  u2cpcnvrt.cpp  unistrref.cpp
src/framework/uima/: annotator.hpp  annotator_abase.hpp  annotator_context.hpp  annotator_mgr.hpp  annotator_timing.hpp  api.hpp  capability.hpp  casiterator.hpp  caspool.hpp  caswriter_abase.hpp  config_param.hpp  config_tools.hpp  configure.h  consoleui.hpp  cp2ucnvrt.hpp  dirwalk.hpp  dllfile.hpp  dottypesystemwriter.hpp  engine.hpp  engine_state.hpp  envvar.hpp  envvars.h  exceptions.hpp  filename.hpp  ftools.hpp  importdescription.hpp  internal_capability_container.hpp  internal_jedii_engine.hpp  internal_primitive_engine.hpp  language.hpp  location.hpp  log.hpp  msg.h  msgstrtab.h  pragmas.hpp  res_abase.hpp  resmgr.hpp  result_specification.hpp  stltools.hpp  strtools.hpp  (+8 more)
src/jni/: jni.cpp  jni_string.cpp  jni_utils.cpp
src/jni/uima/: jni.hpp  jni_string.hpp  jni_utils.hpp
src/test/: Makefile.am  Makefile.in  fvt.bat  fvt.sh  fvtTestfile  fvtTestfile.debug  test.sln
src/test/data/ExampleCas/: newprimitives.xcas  newprimitivesPartialTypeSystem.xml  newprimitivesTypeSystem.xml  testTae.xml  v1MultiSofaCas.xml
src/test/data/descriptors/: AggregateCASMultiplier.xml  SegmentAnnotateMerge.xml  SimpleTextMerger.xml  SimpleTextSegmenter.xml  TextSegmentConsumer.xml  dump.xml  javaaggregate.xml  stopword.xml  stopwordtest.xml  testspec_enus.xml  testspec_nolangs.xml  testspec_several.xml  tok.xml  toktest.xml  tt_core_typesystem.xml  tt_indexes.xml  tt_typesystem.xml
src/test/src/: MeetingAnnotator.vcproj  SimpleTextMerger.cpp  SimpleTextSegmenter.cpp  SimpleTextSegmenter.vcproj  SofaStreamHandlerFile.cpp  SofaStreamHandlerFile.vcproj  TextSegmentConsumer.cpp  TextSegmentConsumer.vcproj  plugin_annotator_dump.vcproj  plugin_tokenizer.vcproj  test_cas.cpp  test_cas.vcproj  test_casserializer.cpp  test_casserializer.vcproj  test_engine.cpp  test_engine.vcproj  test_engine.vcproj-new  test_iterators.cpp  test_iterators.vcproj  test_language.cpp  test_language.vcproj  test_primitivetypes.cpp  test_primitivetypes.vcproj  test_sofa.cpp  test_sofa.vcproj  test_typepriority.vcproj  test_xcasdeserialization.cpp  test_xcasdeserialization.vcproj  test_xmideserialization.cpp  test_xmideserialization.vcproj
src/utils/: ActiveMQAnalysisEngineService.cpp  ActiveMQAnalysisEngineService.hpp  Makefile.am  Makefile.in  deployCppService.cpp  deployCppService.hpp  runAECpp.cpp
uimacpp-2.2.2-01/: LICENSE  README.4src  RELEASE_NOTES.html  buildsdk.cmd  buildsdk.sh
uimacpp-2.2.2-02/: NOTICE  README.4src  buildSrcTree.cmd  buildsdk.sh
(+215 files in other folders)
